[package]
name = "evif-test-helpers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Testing utilities
tempfile = { workspace = true }
tokio-test = { workspace = true }

# HTTP client for API testing
reqwest = { version = "0.11", features = ["blocking"] }

# Async runtime
tokio = { workspace = true }

# Utilities
once_cell = "1.19"

[dev-dependencies]
# Internal crates
evif-cli = { path = "../../crates/evif-cli" }
evif-rest = { path = "../../crates/evif-rest" }
